Home page changed

--- a/evd/web/templates/base2.html
+++ b/evd/web/templates/base2.html
@@ -976,14 +976,14 @@
                     <span class="divider">|</span>
                 </li>
                 {% endblock %}
-                <li class="dropdown">
+                <!--<li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="/myevidyaloka/contributions/">My Contributions  <b class="caret"></b></a>
                          <ul class="dropdown-menu" style="display: none; ">
                         <li><a href="/myevidyaloka/contributions/">Donations</a></li>
                             <li><a href="/donorupdate/">Donor Update</a></li>
                      </ul>  
                     <span class="divider">|</span>
-                </li>
+                </li>-->
             {% block breadcrumb_extras %}
 
             {% endblock %}
