--- a/evd/web/templates/new_base_1.html
+++ b/evd/web/templates/new_base_1.html
@@ -1172,13 +1172,13 @@ font-size:18px;
                         </ul>
                     </li>
                       <!-- <li><a class="text_color" href="/v2/newevdpage/" >Run for eVidyaloka</a></li> -->
-                      <li class="dropdown">
+                      <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false">Get Involved<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown_css" role="menu">
                             <li class="li__bgcolor"><a class="href_color" href='/engage/' target='_blank'><img src="/static/img_new/workplace_logo.png" width="25px" />&nbsp;&nbsp;Workplace</a></li>
-                            <li class="li__bgcolor"><a class="href_color" href="/" target="_blank">Blog</a></li>
+                            <li class="li__bgcolor"><a class="href_color" href="/" target="_blank">Blog</a></li>-->
                             <!--<li class="li__bgcolor"><a class="href_color" href="/forums/"target="_blank">Forums</a></li>-->
-                            <li class="li__bgcolor"><a class="href_color" href="/newsletter/"target="_blank">News letters</a></li>
+                            <!--<li class="li__bgcolor"><a class="href_color" href="/newsletter/"target="_blank">News letters</a></li>
                             {% if user.is_authenticated %}
                             <li></li>
                             {% else %}
@@ -1186,9 +1186,9 @@ font-size:18px;
                                 Sign Up</a></li> 
                                 {% endif %}
                             </ul>
-                        </li>
+                        </li>-->
                         <!--<li><a class="hidden-sm login" href="#" data-toggle="modal" data-target="#modal1">test-Login</a></li>-->
-                        <li><a class="text_color" href="/sponsor/">Donate</a></li>
+                        <!--<li><a class="text_color" href="/sponsor/">Donate</a></li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false" style="background-color:yellow">Volunteer Helpline<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown_cs">
@@ -2059,21 +2059,21 @@ font-size:18px;
                             <span class="divider">|</span>
                         </li>
                         {% endblock %}
-                        <li class="dropdown contributions">
+                       <!-- <li class="dropdown contributions">
                             <a class="dropdown-toggle color_css" data-toggle="dropdown" href="/myevidyaloka/contributions/">My Contributions  <b class="caret"></b></a>
                             <ul class="dropdown-menu" style="display: none; ">
                                 <li><a href="/myevidyaloka/contributions/">Donations</a></li>
                                 <li><a href="/donorupdate/">Donor Update</a></li>
-                                <li><a href="/v2/my_referrals/">My Referrals</a></li>
+                                <li><a href="/v2/my_referrals/">My Referrals</a></li>-->
                                 <!-- {% if is_partner %}
                                     <li><a href="/my_certificate/">My Certificate</a></li>
                                 {% endif %}
                                 {% if is_teacher %}
                                     <li><a href="/config/my_certificate/">My Certificate</a></li>
                                 {% endif %} -->
-                            </ul>
+                            <!--</ul>
                             <span class="divider">|</span>
-                        </li>
+                        </li>-->
                         {% block breadcrumb_extras %}
 
                         {% endblock %}
