--- a/evd/web/templates/new_base_temp.html
+++ b/evd/web/templates/new_base_temp.html
@@ -636,7 +636,7 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown">
+                            <!--<li class="dropdown">
                                 <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false">Get Involved<span class="caret"></span></a>
                                 <ul class="dropdown-menu dropdown_css" role="menu">
                                     <li class="li__bgcolor">
@@ -654,7 +654,7 @@
                                 </ul>
                             </li>
 
-                            <li><a class="text_color" href="/sponsor/">Donate</a></li>
+                            <li><a class="text_color" href="/sponsor/">Donate</a></li>-->
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle bgcolor_none" data-toggle="dropdown" role="button" aria-expanded="false" style="background-color:yellow">Volunteer Helpline<span class="caret"></span></a>
                                 <ul class="dropdown-menu dropdown_css">
