--- a/evd/web/templates/base.html
+++ b/evd/web/templates/base.html
@@ -992,7 +992,7 @@ font-size:18px;
                         </ul>
                     </li>
                       <!-- <li><a class="text_color" href="/v2/newevdpage/" >Run for eVidyaloka</a></li> -->
-                      <li class="dropdown">
+                      <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false">Get Involved<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown_css" role="menu">
                             <li class="li__bgcolor"><a class="href_color" href='/engage/' target='_blank'><img src="/static/img_new/workplace_logo.png" alt="workplace logo" width="25px" />&nbsp;&nbsp;Workplace</a></li>
@@ -1006,9 +1006,9 @@ font-size:18px;
                                 Sign Up</a></li> 
                                 {% endif %}
                             </ul>
-                        </li>
+                        </li>-->
 
-                        <li><a class="text_color" href="">Donate</a></li>
+                        <!--<li><a class="text_color" href="">Donate</a></li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle text-black text_color" data-toggle="dropdown" role="button" aria-expanded="false" style="background-color:yellow">Volunteer Helpline<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown_cs">
@@ -1902,7 +1902,7 @@ font-size:18px;
                         {% block userprofile %}
 
                         {% endblock %}
-                        <li class="dropdown contributions" id='contribution_id'>
+                        <!--<li class="dropdown contributions" id='contribution_id'>
                             <a class="dropdown-toggle color_css" data-toggle="dropdown" href="/myevidyaloka/contributions/">My Contributions  <b class="caret"></b></a>
                             <ul class="dropdown-menu" style="display: none; ">
                                 <li><a href="/myevidyaloka/contributions/">Donations</a></li>
@@ -1914,7 +1914,7 @@ font-size:18px;
                                 {% endif %}
                             </ul>
                             <span class="divider">|</span>
-                        </li>
+                        </li>-->
                         {% block breadcrumb_extras %}
 
                         {% endblock %}
