--- a/evd/web/templates/breadcrumb_widget.html
+++ b/evd/web/templates/breadcrumb_widget.html
@@ -156,7 +156,7 @@
 
 <span class="divider">|</span>
 
-<li class="dropdown">
+<!--<li class="dropdown">
 
    <a class="dropdown-toggle" data-toggle="dropdown">Manage Donations<b class="caret"></b></a>
    <ul class="dropdown-menu" style="display: none; ">
@@ -172,7 +172,7 @@
 
     </ul>
    <span class="divider">|</span>
-</li>
+</li>-->
 
 {% endif %}
 
