--- a/evd/web/templates/new_base_1.html
+++ b/evd/web/templates/new_base_1.html
@@ -2097,65 +2097,63 @@ font-size:18px;
             ================================================== -->
             <footer id="contact" class="footer" style="padding-top:0px;padding-bottom:2em">
 
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="col-sm-3 col-md-3">
-                      <div class="footer-logo">
-                        <h2 style="font-size:20px">eVidyaloka Trust</h2>
-                        <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
-                        <p class="muted">© eVidyaloka Trust 2016</p>
-                        <a href="/policies_terms_conditions/">Terms of Service</a>
-                        <a href="/policies/">Privacy</a>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="col-sm-3 col-md-4">
+                        <div class="footer-logo">
+                          <h3>eVidyaloka Trust</h2>
+                          <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
+                          <p class="muted">© eVidyaloka Trust 2016</p>
+                          <a href="/policies_terms_conditions/">Terms of Service</a>
+                          <a href="/policies/">Privacy</a>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-sm-3 col-md-3">
-                      <h3>Organization</h3>
-                      <ul class="list-unstyled" style="margin-bottom:0px">
-                        <li><a href="/governance/" target='_blank'>Governance</a></li>
-                        <li><a href="/operating_principles/" target='_blank'>Operating Principles</a></li>
-                        <li><a href="/faq/" target='_blank'>FAQs</a></li>
-                        <li><a href="/careers/" target='_blank'>Careers</a></li>
-                        <li><a href="/conduct/" target='_blank'>Code of conduct</a></li>
-                       </ul>
-                    </div>
-                    <div class="col-sm-3 col-md-2">
-                      <h3>Resources</h3>
-                      <ul class="list-unstyled"  style="margin-bottom:0px">
-                        <li><a href="http://www.mhrd.gov.in/school-education"target="_blank">Ministry of HRD</a></li>
-                        <li><a href="http://www.mhrd.gov.in/rte"target="_blank">Right to Education</a></li>
-                        <li><a href="http://en.wikipedia.org/wiki/Education_in_India"target="_blank">Education in India</a></li>
-                        <li><a href="http://www.educationforallinindia.com/" target="_blank">Educational Statistics</a></li>
-                        <li><a href="http://www.asercentre.org/Keywords/p/205.html" target="_blank">ASER Reports</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-sm-3 col-md-2">
-                        <h3>Community</h3>
+                      <div class="col-sm-3 col-md-3">
+                        <h3>Sunbird</h3>
+                        <ul class="list-unstyled" style="margin-bottom:0px">
+                          <li><a href="https://sunbird.org/building-blocks" target='_blank'>Building Blocks</a></li>
+                          <li><a href="https://serve.sunbird.org/" target='_blank'>Sunbird Serve</a></li>
+                          <li><a href="https://github.com/Sunbird-Serve/Community/discussions" target='_blank'>Serve Discussion Forum</a></li>
+                         </ul>
+                      </div>
+                      <div class="col-sm-3 col-md-3">
+                        <h3>Resources</h3>
                         <ul class="list-unstyled"  style="margin-bottom:0px">
-                            <li><a href="/" target="_blank">Blogs</a></li>
-                            <li><a href="/forums/" target='_blank'>Forums</a></li>
-                            <li><a href="/partners/" target='_blank'>Partners</a></li>
+                          <li><a href="http://www.mhrd.gov.in/school-education"target="_blank">Ministry of HRD</a></li>
+                          <li><a href="http://www.mhrd.gov.in/rte"target="_blank">Right to Education</a></li>
+                          <li><a href="http://en.wikipedia.org/wiki/Education_in_India"target="_blank">Education in India</a></li>
+                          <li><a href="http://www.educationforallinindia.com/" target="_blank">Educational Statistics</a></li>
+                          <li><a href="http://www.asercentre.org/Keywords/p/205.html" target="_blank">ASER Reports</a></li>
                         </ul>
-                    </div>
-                    <div class="col-sm-3 col-md-2">
-                      <h3> </h3>
-                      <ul class="list-unstyled" style="margin-bottom:0px">
-                        <li><a href="" target='_blank'>Donate</a></li>
-                        <li><a href="/contact_us/" target='_blank' >Contact Us</a></li>
-                      </ul>
+                      </div>
+                      <!--<div class="col-sm-3 col-md-2">
+                          <h3>Community</h3>
+                          <ul class="list-unstyled"  style="margin-bottom:0px">
+                              <li><a href="/" target="_blank">Blogs</a></li>
+                              <li><a href="/forums/" target='_blank'>Forums</a></li>
+                              <li><a href="/partners/" target='_blank'>Partners</a></li>
+                          </ul>
+                      </div>
+                      <div class="col-sm-3 col-md-2">
+                        <h3> </h3>
+                        <ul class="list-unstyled" style="margin-bottom:0px">
+                          <li><a href="/sponsor/" target='_blank'>Donate</a></li>
+                          <li><a href="/contact_us/" target='_blank' >Contact Us</a></li>
+                        </ul>
+                      </div>-->
                     </div>
                   </div>
+                  <div class="row hidden">
+                    <div class="col-lg-12 text-center">
+                      <a class="icon icon-foot" href="https://twitter.com/evidyaloka" target="_blank"><i class="fa fa-twitter"></i></a>
+                      <a class="icon icon-foot" href="https://www.facebook.com/eVidyaloka/" target="_blank"><i class="fa fa-facebook"></i></a>
+                      <a class="icon icon-foot" href="https://www.youtube.com/user/eVidyaloka" target="_blank"><i class="fa fa-youtube"></i></a>
+                     </div>
+                  </div>
                 </div>
-                <div class="row hidden">
-                  <div class="col-lg-12 text-center">
-                    <a class="icon icon-foot" href="https://twitter.com/evidyaloka" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <a class="icon icon-foot" href="https://www.facebook.com/eVidyaloka/" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a class="icon icon-foot" href="https://www.youtube.com/user/eVidyaloka" target="_blank"><i class="fa fa-youtube"></i></a>
-                   </div>
-                </div>
-              </div>
-
-            </footer>
+  
+              </footer>
 
             <!-- Profile Pic modal -->
             <div id="change_pic" class="modal fade" role="dialog">
