--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -1384,21 +1384,6 @@
               id="ec-nav__collapsible" style="justify-content:center;"
             >
               <ul class="nav navbar-nav ec-nav__navbar">
-                {% comment %}
-                <li class="nav-item nav-item__has-megamenu megamenu-col-12">
-                  <pre></pre>
-                </li>
-                {% endcomment %}
-
-                <li class="nav-item nav-item__has-megamenu megamenu-col-2">
-                  <a class="nav-link" href="/about/">About</a>
-                </li>
-
-                {% comment %}
-                <li class="nav-item nav-item__has-megamenu megamenu-col-2">
-                  <a class="nav-link" href="">Community</a>
-                </li>
-                {% endcomment %}
 
                 <li class="nav-item nav-item__has-megamenu megamenu-col-2">
                   <a class="nav-link" href="/volunteer/">Volunteer</a>
@@ -1410,26 +1395,23 @@
 
               
 
-                {% comment %} <li class="nav-item nav-item__has-dropdown dropdown">
+                <li class="nav-item nav-item__has-dropdown dropdown">
                   <a
                     class="dropdown-toggle nav-link"
                     style="color: black"
                     data-toggle="dropdown"
-                    >Partner</a
+                    >About</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/partner/become_partner/"
-                      >Partner</a
+                    <a class="dropdown-item" href="https://www.sunbird.org/about-us"
+                      >Sunbird Overview</a
                     >
-                    <a class="dropdown-item" href="/digital_school/"
-                      >Digital School</a
+                    <a class="dropdown-item" href="/about/"
+                      >eVidyaloka Overview</a
                     >
-                    <a class="dropdown-item" href="/springboard"
-                      >HOST A SPRING-BOARD</a
-                    >
-                    <a class="dropdown-item" href="/evplus">E V Plus</a>
+                   
                   </div>
-                </li> {% endcomment %}
+                </li> 
                 <!-- <li class="nav-item nav-item__has-megamenu megamenu-col-2">
             	<a  class="nav-link" href='/school/search'>Have A School In Mind?</a>
             </li> -->
@@ -1882,7 +1864,7 @@
       <div class="bg-dark text-white-0_6">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 mt-5">
+            <div class="col-lg-3 col-md-6 mt-5" style="margin-left: 80px;">
               <h4 class="h5 text-white">eVidyaloka Trust</h4>
               <div class="width-3rem bg-primary height-3 mt-3"></div>
               <div class="margin-y-40">
@@ -1897,131 +1879,32 @@
                 <p class="muted"><a href="/policies/">Privacy</a></p>
               </div>
 
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a
-                    class="iconbox bg-white-0_2 hover:primary"
-                    href="https://www.facebook.com/eVidyaloka/"
-                    target="_blank"
-                    ><i class="ti-facebook"> </i
-                  ></a>
-                </li>
-                <li class="list-inline-item">
-                  <a
-                    class="iconbox bg-white-0_2 hover:primary"
-                    href="https://twitter.com/evidyaloka"
-                    target="_blank"
-                    ><i class="ti-twitter"> </i
-                  ></a>
-                </li>
-                <li class="list-inline-item">
-                  <a
-                    class="iconbox bg-white-0_2 hover:primary"
-                    href="https://www.youtube.com/user/eVidyaloka"
-                    target="_blank"
-                    ><i class="fa fa-youtube"> </i
-                  ></a>
-                </li>
-                <!--             <li class="list-inline-item"><a class="iconbox bg-white-0_2 hover:primary" href=""><i class="ti-pinterest"></i></a></li> -->
-              </ul>
+              
             </div>
 
-            <div class="col-lg-2 col-md-6 mt-5">
-              <h4 class="h5 text-white">Organization</h4>
-              <div class="width-3rem bg-primary height-3 mt-3"></div>
-              <ul class="list-unstyled marginTop-40">
-                <li class="mb-2">
-                  <a href="/governance/" target="_blank">Governance</a>
-                </li>
-                <li class="mb-2">
-                  <a href="/operating_principles/" target="_blank"
-                    >Operating Principles</a
-                  >
-                </li>
-                <li class="mb-2"><a href="/faq/" target="_blank">FAQs</a></li>
-                <li class="mb-2">
-                  <a href="/careers/" target="_blank">Careers</a>
-                </li>
-                <li class="mb-2">
-                  <a href="/conduct/" target="_blank">Code of conduct</a>
-                </li>
-                <li class="mb-2">
-                  <a href="/app_privacy/" target="_blank">App Privacy</a>
-                </li>
-              </ul>
+            <div class="col-lg-2 col-md-6 mt-5" style="margin-left: 40px; margin-right: 40px;">
+              <h4 class="h5 text-white">Sunbird</h4>
+              <div class="width-3rem bg-primary height-3 mt-3" ></div>
+              <ul class="list-unstyled" style="margin-bottom:0px; margin-top: 40px;">
+                <li><a href="https://sunbird.org/building-blocks" target='_blank'>Building Blocks</a></li>
+                <li><a href="https://serve.sunbird.org/" target='_blank'>Sunbird Serve</a></li>
+                <li><a href="https://github.com/Sunbird-Serve/Community/discussions" target='_blank'>Serve Discussion Forum</a></li>
+               </ul>
             </div>
 
             <div class="col-lg-2 col-md-6 mt-5">
               <h4 class="h5 text-white">Resources</h4>
               <div class="width-3rem bg-primary height-3 mt-3"></div>
-              <ul class="list-unstyled marginTop-40">
-                <li class="mb-2">
-                  <a
-                    href="http://www.mhrd.gov.in/school-education"
-                    target="_blank"
-                    >Ministry of HRD</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="http://www.mhrd.gov.in/rte" target="_blank"
-                    >Right to Education</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="http://en.wikipedia.org/wiki/Education_in_India"
-                    target="_blank"
-                    >Education in India</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="http://www.educationforallinindia.com/"
-                    target="_blank"
-                    >Educational Statistics</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="http://www.asercentre.org/Keywords/p/205.html"
-                    target="_blank"
-                    >ASER Reports</a
-                  >
-                </li>
+              <ul class="list-unstyled"  style="margin-bottom:0px; margin-top: 40px;">
+                <li><a href="http://www.mhrd.gov.in/school-education"target="_blank">Ministry of HRD</a></li>
+                <li><a href="http://www.mhrd.gov.in/rte"target="_blank">Right to Education</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Education_in_India"target="_blank">Education in India</a></li>
+                <li><a href="http://www.educationforallinindia.com/" target="_blank">Educational Statistics</a></li>
+                <li><a href="http://www.asercentre.org/Keywords/p/205.html" target="_blank">ASER Reports</a></li>
               </ul>
             </div>
 
-            <div class="col-lg-2 col-md-6 mt-5">
-              <h4 class="h5 text-white">Community</h4>
-              <div class="width-3rem bg-primary height-3 mt-3"></div>
-              <ul class="list-unstyled marginTop-40">
-                <li class="mb-2">
-                  <a href="http://www.evidyaloka.org/blog" target="_blank"
-                    >Blogs</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="/forums/" target="_blank">Forums</a>
-                </li>
-                <li class="mb-2">
-                  <a href="/partners/" target="_blank">Partners</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-6 mt-5">
-              <h4 class="h5 text-white">&nbsp;</h4>
-              <div class="width-3rem height-3 mt-3"></div>
-              <ul class="list-unstyled marginTop-40">
-                <li class="mb-2">
-                  <a href="/sponsor/" target="_blank">Donate</a>
-                </li>
-                <li class="mb-2">
-                  <a href="/contact_us/" target="_blank">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+            
           <!-- END row-->
         </div>
         <!-- END container-->
