--- a/evd/web/templates/base.html
+++ b/evd/web/templates/base.html
@@ -974,20 +974,46 @@ font-size:18px;
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <div>
-                        <a class="navbar-brand scroll" href="/">
-                            <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
-                            <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute">
+                    <div class="col-sm-3" style="float:left;">
+                        <!--        <ul class="nav navbar-nav ec-nav__navbar " style="display:inline-flex;"> -->
+                        <!--        <li class="nav-item nav-item__has-megamenu megamenu-col-2"> -->
+                        <a style="padding-top:0.7rem" class="" href='/' style="padding-right:0px !important;">
+                            <img class="img_css" alt="" src="https://sunbird.org/images/logo/logo.svg" width="170px" height="50px" style="border-radius:100%;">
                         </a>
+                        <!--          </li> -->
+                        <!--           <li class="nav-item nav-item__has-megamenu megamenu-col-2"> -->
+                        <!-- <a style="padding-top:0.4rem" class="" href='/' style="padding-left:0px !important;">
+                            <img class="img_css1" alt="" src="/static/images/evidyaban_1000x250.png" width="275px">
+                        </a> -->
+                        <!--           </li> -->
+                        <!--        </ul> -->
+    
+                        <span aria-expanded="false" class="navbar-toggler ml-auto collapsed mt-2" data-target="#ec-nav__collapsible" data-toggle="collapse">
+                 <div class="hamburger hamburger--spin js-hamburger">
+                     <div class="hamburger-box">
+                      <div class="hamburger-inner"></div>
+                     </div>
+                   </div>
+               </span>
                     </div>
+                    
                 </div>
+
+                <div class="col-sm-3" style="float:right;">
+                    <a class="navbar-brand scroll" href="/">
+                        <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
+                        <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute">
+                    </a>
+                </div>
+
+
                 <div id="navbar-collapse1" class="navbar-collapse collapse nav_margin" style="/*margin-right:40px;*/">
                   <ul class="nav navbar-nav pull-right new_menu">
 
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false">About<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown_css" role="menu">
-                            <li class="li__bgcolor border_radius"><a class="href_color" href=''>About Us</a></li>
+                            <li class="li__bgcolor border_radius"><a class="href_color" href='/about/'>About Us</a></li>
 
                         </ul>
                     </li>
@@ -1009,7 +1035,7 @@ font-size:18px;
                         </li>-->
 
                         <!--<li><a class="text_color" href="">Donate</a></li>-->
-                        <li class="dropdown">
+                        <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle text-black text_color" data-toggle="dropdown" role="button" aria-expanded="false" style="background-color:yellow">Volunteer Helpline<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown_cs">
                                 <div class="li__bgcolor volunteer_css" style="padding: 15px; width: 220px;line-height: 25px;">
@@ -1027,7 +1053,7 @@ font-size:18px;
                               </div>
                               
                             </ul>
-                        </li>
+                        </li>-->
 
                         {% if user.is_authenticated %}
                         <li></li>
@@ -1945,9 +1971,9 @@ font-size:18px;
               <div class="container">
                 <div class="row">
                   <div class="col-lg-12">
-                    <div class="col-sm-3 col-md-3">
+                    <div class="col-sm-3 col-md-4">
                       <div class="footer-logo">
-                        <h2 style="font-size:20px">eVidyaloka Trust</h2>
+                        <h3>eVidyaloka Trust</h2>
                         <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
                         <p class="muted">© eVidyaloka Trust 2016</p>
                         <a href="/policies_terms_conditions/">Terms of Service</a>
@@ -1955,16 +1981,14 @@ font-size:18px;
                       </div>
                     </div>
                     <div class="col-sm-3 col-md-3">
-                      <h3>Organization</h3>
+                      <h3>Sunbird</h3>
                       <ul class="list-unstyled" style="margin-bottom:0px">
-                        <li><a href="/governance/" target='_blank'>Governance</a></li>
-                        <li><a href="/operating_principles/" target='_blank'>Operating Principles</a></li>
-                        <li><a href="/faq/" target='_blank'>FAQs</a></li>
-                        <li><a href="/careers/" target='_blank'>Careers</a></li>
-                        <li><a href="/conduct/" target='_blank'>Code of conduct</a></li>
+                        <li><a href="https://sunbird.org/building-blocks" target='_blank'>Building Blocks</a></li>
+                        <li><a href="https://serve.sunbird.org/" target='_blank'>Sunbird Serve</a></li>
+                        <li><a href="https://github.com/Sunbird-Serve/Community/discussions" target='_blank'>Serve Discussion Forum</a></li>
                        </ul>
                     </div>
-                    <div class="col-sm-3 col-md-2">
+                    <div class="col-sm-3 col-md-3">
                       <h3>Resources</h3>
                       <ul class="list-unstyled"  style="margin-bottom:0px">
                         <li><a href="http://www.mhrd.gov.in/school-education"target="_blank">Ministry of HRD</a></li>
@@ -1974,7 +1998,7 @@ font-size:18px;
                         <li><a href="http://www.asercentre.org/Keywords/p/205.html" target="_blank">ASER Reports</a></li>
                       </ul>
                     </div>
-                    <div class="col-sm-3 col-md-2">
+                    <!--<div class="col-sm-3 col-md-2">
                         <h3>Community</h3>
                         <ul class="list-unstyled"  style="margin-bottom:0px">
                             <li><a href="/" target="_blank">Blogs</a></li>
@@ -1988,7 +2012,7 @@ font-size:18px;
                         <li><a href="/sponsor/" target='_blank'>Donate</a></li>
                         <li><a href="/contact_us/" target='_blank' >Contact Us</a></li>
                       </ul>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
                 <div class="row hidden">
